# MedicalGPT

./: README.md  main.py  pyproject.toml
data/eval/: C_Evalmedical数据集.ipynb  ceval_basic_medicine_test.jsonl  ceval_clinical_medicine_test.jsonl  ceval_physician_test.jsonl
data/finetune/synthesized/: medalpaca_cot.jsonl  medalpaca_cot_errors.jsonl
data/raw/: medalpaca_format.jsonl  sharegpt_zh_1K_format.jsonl
preprocessing/: .env.example  .gitignore  README.md  pyproject.toml
preprocessing/config/: models.yaml  prompts.yaml
preprocessing/scripts/: clean_data.py  synthesize.py  validate.py
preprocessing/src/: __init__.py  api_router.py  logger.py  nodes.py  state.py  workflow.py
src/: eval_ceval_qwen.py  supervised_finetuning.py
