[project]
name = "medicalgpt"
version = "0.1.0"
description = "MedicalGPT training and evaluation"
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "transformers>=4.50.0",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "scikit-learn",
    "loguru",
    "tqdm",
    "sentencepiece",
    "gradio",
    "tensorboard",
    "numpy",
    "swanlab>=0.7.6",
]

[tool.uv]
managed = true
